Added flex boxing and toggling of bingo cells

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="gen.js"></script>
 </head>
 <body>
-	<div id="boards">
+	<div class="row" id="boards">
 	</div>
 </body>
 </html>
