--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
 	<script type="text/javascript" src="gen.js"></script>
 </head>
 <body>
-	<div class="row" id="boards">
+	<div class="row">
+		<label class="text">Number of Players:</label>
+		<input type="number" id="nBoards" class="input" value="3">
+	</div>
+	<div class="row">
+		<label class="text">Board Size:</label>
+		<input type="number" id="size" class="input" value="4">
+	</div>
+	<div class="row">
+		<label class="text">Minimum:</label>
+		<input type="number" id="min" class="input" value="1">
+		<label class="text">Maximum:</label>
+		<input type="number" id="max" class="input" value="30">
+	</div>
+	<div class="row">
+		<button id="gen" class="gen" type="button" onclick="genBoards()">Generate Bingo Boards!</button>
+	</div>
+
+	<div id="boards" class="row">
+	</div>
+
+	<div class="row">
+		<div class="block">
+			<button class="draw" type="button" onclick="draw()">Draw!</button>
+			<br>
+			<br>
+			<button class="draw" type="button" onclick="back()">Back</button>
+		</div>
+		<div class="block">
+			<br>
+			<br>
+			<label id="drawNum" class="drawNum"></label>
+		</div>
+		<div class="block">
+			<img src="pm.png" height="140">
+		</div>
+		<div class="block">
+			<input id="pNum" class="pmNum" type="text"></label>
+			<br>
+			<br>
+			<input id="mNum"class="pmNum" type="text"></label>
+		</div>
 	</div>
 </body>
 </html>
