--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
 	<div class="row">
 		<label class="text">Number of Players:</label>
 		<input type="number" id="nBoards" class="input" value="3">
-	</div>
-	<div class="row">
+		&nbsp;
+		&nbsp;
+		&nbsp;
+		&nbsp;
 		<label class="text">Board Size:</label>
 		<input type="number" id="size" class="input" value="4">
 	</div>
 	<div class="row">
 		<label class="text">Minimum:</label>
 		<input type="number" id="min" class="input" value="1">
+		&nbsp;
+		&nbsp;
+		&nbsp;
+		&nbsp;
 		<label class="text">Maximum:</label>
 		<input type="number" id="max" class="input" value="30">
+	</div>
+	<div class="row">
+		<label class="text">Increment:</label>
+		<input type="number" id="incr" class="input" value="9">
 	</div>
 	<div class="row">
 		<button id="gen" class="gen" type="button" onclick="genBoards()">Generate Bingo Boards!</button>
